backend/kubernetes/kube-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: wine-recommender
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - image: mongo
          imagePullPolicy: Always
          name: mongodb
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-pvc
      volumes:
        - name: mongodb-pvc
          persistentVolumeClaim:
            claimName: mongodb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: wine-recommender
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: wine-recommender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          imagePullPolicy: Always
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: wine-recommender
spec:
  selector:
    app: mongo-express
  ports:
    - name: http
      port: 80
      targetPort: 8081

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: wine-recommender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image: ghcr.io/mse-wem/wine-recommender-node-mongo-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app
  namespace: wine-recommender
spec:
  selector:
    app: nodejs-app
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: wine-recommender
spec:
  rules:
    - host: mongo-wine-recommender.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: wine-recommender
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /api/recipes/many {
        client_max_body_size 50M;
      }
      location /api/wines/many {
        client_max_body_size 50M;
      }
spec:
  rules:
    - host: api-wine-recommender.kube.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-app
                port:
                  number: 80
